--- a/env.example
+++ b/env.example
@@ -6,18 +6,20 @@ DEBUG=true
 LOG_LEVEL=INFO
 
 # ===========================================================
-# BANCO DE DADOS - POSTGRESQL
+# BANCO DE DADOS - POSTGRESQL COMPARTILHADO
 # ===========================================================
-DATABASE_URL=postgresql://crypto_user:crypto_password_2025@db:5432/bullbot_signals
+# Usando o mesmo banco do bullbot-signals
+DATABASE_URL=postgresql://bullbot_user:bullbot_password_2025@db:5432/bullbot_signals
 
 # ===========================================================
-# CACHE - REDIS
+# CACHE - REDIS COMPARTILHADO
 # ===========================================================
-REDIS_URL=redis://localhost:6379/0
-
+# Usando o mesmo Redis do bullbot-signals
+REDIS_URL=redis:6379/0
 
 # ===========================================================
 # MENSAGENS - TELEGRAM
 # ===========================================================
-TELEGRAM_BOT_TOKEN=xx:xxxx
-TELEGRAM_CHAT_ID=xxx
+TELEGRAM_BOT_TOKEN=8293101613:AAHY4riQdh6OoRx5gI1OAjt06OMbVJLP0
+TELEGRAM_GROUP_CHAT_ID=7469424668
+BULLBOT_SIGNALS_API_URL=http://bullbot-signals:8000
