Update BullBot Telegram to enhance user configuration management and signal processing. Modify Docker Compose to specify Celery worker queues for Telegram. Revise README for improved project clarity and add detailed documentation on global configurations and Telegram bot integration. Implement user-specific settings for signal filters and enhance error handling in Telegram commands.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   celery_worker:
     build:
       context: .
-    command: celery -A src.tasks.celery_app worker --loglevel=info
+    command: celery -A src.tasks.celery_app worker --loglevel=info --queues=telegram
     volumes:
       - .:/app
     depends_on:
