--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - .:/app
     depends_on:
       - redis
+    external_links:
+      - bullbot-signals-db-1:db
     env_file:
       - .env
     networks:
@@ -27,6 +29,8 @@ services:
       - .:/app
     depends_on:
       - redis
+    external_links:
+      - bullbot-signals-db-1:db
     env_file:
       - .env
     networks:
@@ -46,6 +50,8 @@ services:
       - .:/app
     depends_on:
       - redis
+    external_links:
+      - bullbot-signals-db-1:db
     env_file:
       - .env
     networks:
