Update Docker Compose to rename external network from 'bullbot-signals_bullbot_network' to 'bullbot-shared-network'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,4 +84,4 @@ services:
 networks:
   bullbot_network:
     external: true
-    name: bullbot-signals_bullbot_network 
+    name: bullbot-shared-network 
